SONAR-14951 Scanners require Java 11